Fix IMG spacing

--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,10 @@ a:focus {
     width: 48%;
 }
 
+.img-33 {
+    width: 32%;
+}
+
 .img-spacelamp {
     width: 100%;
     height: 96%;
@@ -559,6 +563,10 @@ footer {
         margin-bottom: 0;
     }
     .img-50 {
+        width: 100%;
+        margin-bottom: 1rem;
+    }
+    .img-33 {
         width: 100%;
         margin-bottom: 1rem;
     }
